GNOME Bugzilla – Bug 690361
ON/OFF button in Mobile Broadband is broken
Last modified: 2017-04-13 13:56:13 UTC
ON/OFF button in Mobile Broadband is broken. 1. Setup Mobile Broadband connection and connect to it. 2. Open "Network Settings" - "Mobile Broadband". 3. Toggle ON/OFF button to OFF. -> Button stays ON, but connection is lost. 4. Disconnect from Mobile Broadband by switching to OFF in applet menu. 5. Open "Network Settings" - "Mobile Broadband". 6. Toggle ON/OFF button to ON. -> Button stays OFF, interface is still disabled. 7. Enable Mobile Broadband interface by switching to ON in applet menu. 8. Open "Network Settings" - "Mobile Broadband". 9. Toggle ON/OFF button. -> "Mobile Broadband" tab disappears and "connection failed" notification pops-up. see attached ~/.xsession-errors
Created attachment 231738 [details] .xsession-errors
This should probably go to gnome-control-center. Martin, can you move it there and specify the version you're using? If you really think this is a problem in NM or MM; please provide debug logs of both while reproducing the issue.
Confirming, tested it yesterday on Fedora 17. NetworkManager-0.9.6.4-3.fc17.x86_64 gnome-shell-3.4.1-6.fc17.x86_64
Moving this bug to gnome-control-center. I noticed the status of "device_off_switch" button depends on the status of wwan radio. In mobilebb_enabled_toggled, you can find these codes: > enabled = nm_client_wwan_get_enabled (client); and > gtk_switch_set_active (sw, enabled); The wwan radio status should be enabled generally, and once mobilebb_enabled_toggled is called, the switch button will be set to ON.
Created attachment 337506 [details] [review] Patch fixing the broken switch button
Created attachment 337508 [details] [review] Updated patch mobilebb_enabled_toggled() shouldn't be called in nm_device_mobile_refresh_ui().
Created attachment 337546 [details] [review] Improved patch Right now, changing wwan radio status changes the status of the switch button. While it shouldn't be the case. The case button should represent whether there is a mobile connection or not.
Created attachment 337557 [details] [review] Patch needs review If you have some time, please help review this patch. Thanks.
Created attachment 337816 [details] [review] Updated patch The switch button should represent the state of the mobile device. So use the state of mobile device to decide the state of this switch button.
*** Bug 781186 has been marked as a duplicate of this bug. ***
Review of attachment 337816 [details] [review]: Could you please add an explanation as to why this is necessary in the commit message? A comment in the code would also be appreciated.
Created attachment 349769 [details] [review] Fix switch button in mobile network page Comment added in the commit message and in the codes.
Review of attachment 349769 [details] [review]: > Use the state of the mobile device to determine the state of the > switch button. Again, please add an explanation as to why and how you're fixing this.
Created attachment 349799 [details] [review] Fix switch button in mobile network page Why and how to fix this issue is added to the commit message. Thanks for the review.
Created attachment 349800 [details] [review] network: Fix mobile broadband switch state The switch was only reflecting the value of the WWAN killswitch instead of both the WWAN killswitch and the state of the connection itself.
Attachment 349800 [details] pushed as bb8ca23 - network: Fix mobile broadband switch state